--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-storybook": "^0.5.5",
+    "storybook-css-modules-preset": "^1.1.1",
     "typescript": "4.5.4"
   }
 }
